--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon src/index.js",
-    "swagger": "node ./swagger.js"
+    "swagger": "node ./swagger.js",
+    "db:migrate": "sequelize db:migrate",
+    "db:seed": "sequelize db:seed:all",
+    "start:with-migrations":" npm run db:migrate && npm run db:seed  && npm run start:dev"
   },
   "author": "",
   "license": "ISC",
