--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "swagger": "node ./swagger.js",
     "db:migrate": "sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
-    "start:with-migrations":" npm run db:migrate && npm run db:seed  && npm run start:dev"
+    "start:with-migrations":"npm run start:dev"
   },
   "author": "",
   "license": "ISC",
